# gcn_tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  gcn.py  karate_semisupervised.py  karate_semisupervised_spektral.py  karate_unsupervised.py  mod_karate_semisupervised.py  pyproject.toml  resources.txt
layers/: graph.py
utils/: sparse.py
