[tool.poetry]
name = "gcn_tutorial"
version = "0.1.0"
description = "Tensorflow 2.2 port of GCN by dsbridge - https://github.com/dbusbridge"
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.2"
networkx = "^2.5"
ipython = "^7.18.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.5.4"
pre-commit = "^2.7.1"
tensorflow = "2.2.0"
numpy = "^1.19.2"
scipy = "1.4.1"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
